--- a/css/style.css
+++ b/css/style.css
@@ -1,44 +1,12 @@
-@media screen and (max-width: 480px) {
-  img {
-    height: 100%;
-    object-fit: contain;
-  }
+img {
+  height: 100%;
+  object-fit: contain;
+}
 
-    p {
-        font-size: 0.7em;
-    }
+p {
+  font-size: 0.7em;
+}
 
-    .film {
-        width: 80%
-    }
-  }
-
-@media screen and (min-width: 481px) and (max-width: 768px) {
-    img {
-        height: 100%;
-        object-fit: contain;
-      }
-    
-        p {
-            font-size: 0.7em;
-        }
-    
-        .film {
-            width: 40%
-        }
-      }
-
-@media screen and (min-width: 768px) {
-    img {
-        height: 100%;
-        object-fit: contain;
-      }
-    
-        p {
-            font-size: 0.7em;
-        }
-    
-        .film {
-            width: 27%
-        }
-      }
+.right {
+  text-align: right;
+}
